landing-page-overflow fixed

--- a/styles/home.css
+++ b/styles/home.css
@@ -28,7 +28,7 @@
   align-items: center;
 }
 .quote {
-  color: rgb(214, 214, 214);
+  color: white;
   font-size: 40px;
   padding: 10px;
 }
@@ -63,17 +63,17 @@
 }
 .horizontal-scrool-wrapper__horizontal-scrool {
   display: grid;
-  grid-template-columns: 1fr 90% 1fr;
+  grid-template-columns: auto 1fr auto;
   align-items: center;
   padding: 0 10px;
   height: 100vh;
+  overflow-x: hidden;
 }
 .horizontal-scrool__slideshow {
   height: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
-  overflow-x: hidden;
 }
 .slideshow__items-container {
   height: 80%;
@@ -96,6 +96,7 @@
   width: 100%;
   height: 100%;
   object-fit: cover;
+  border-radius: 10px;
 }
 
 #slideshow__item-image4 {
@@ -137,11 +138,12 @@
   width: 100%;
   text-align: left;
   padding-left: 15px;
-  font-size: 40px;
+  font-size: 50px;
   margin: 0;
-  color: #ffb30d;
-  background-color: white;
-  bottom: 0;
+  color: #f9f7f3;
+  background-color: #000000;
+  padding-bottom: 15px;
+  top: 0;
 }
 
 #slideshow__item-text4 {
@@ -203,7 +205,7 @@
   }
   #slideshow__item-image4 {
     width: 100%;
-    height: 70%;
+    height: 80%;
   }
   .quote {
     font-size: 30px;
@@ -246,7 +248,7 @@
   .quote {
     width: 70%;
     background-color: rgb(214, 214, 214, 0.5);
-    border: 10px;
+    border: 5%;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
   }
 }
